themes/a2zali-theme/docroot/_diffs/css/a2zali.css
/* ... */
.sticky #navigation li > ul.child-menu {
	top: 50px;
}

#navigation li > ul.child-menu .row-fluid {
	margin-bottom: 2%;
}

#navigation li ul.child-menu > li {
	display: table-cell;
	max-width: 200px;
    min-width: 200px;
}

#navigation li ul.child-menu > li a {
	font-size: 14px;
}

#navigation li ul.child-menu > li a:focus {
	background-color: transparent;
}

#navigation ul.grandchildmenu {
	margin-left: 0px;
}

#navigation li ul.child-menu li ul.grandchildmenu li {
	display: -moz-inline-box;
	display: -webkit-box;
}

#mobile_nav, #nav_list {
	display: none;
}

.topHeader ul, #search-div #heading.span3 {
	margin-left: 0;
}

/* #search-div.row-fluid.sticky {
	width: 100%;
} */

.topHeaderWrapper.row-fluid, #search-div.row-fluid, .row-fluid.sticky .mainHeadWrapper, 
.bg .shopListSort.row-fluid, .bg #shopping_list.row-fluid, .bg .content_wrapper, .copyRight.row-fluid, 
.footer_wrapper, .bg .shoppingItemDetails.rowfluid, #breadcrumbs .breadcrumb, .row-fluid.featured-container {
	margin: 0 auto;
	width: 94%;
}

.shopListSort.row-fluid, #shopping_list.row-fluid, .content_wrapper, .shoppingItemDetails.rowfluid,
.new-checkout, .shoppingCartPage{
	margin: 0 auto;
	width: 76%;
}

#search-div.row-fluid.sticky {
	width: 100%;
}

#search-div .span9 {
	padding: 10px 0;
}

#search-div {
	padding: 10px 0;
}

#search-div.sticky {
	padding: 0;
}

.social-icons .fa-facebook, .social-icons .fa-twitter, .social-icons .fa-google-plus, .social-icons .fa-youtube {
	background: none;
}

.topHeader ul.contact {
	float: right;
}

li.langPortlet form, li.langPortlet form .control-group, li.langPortlet form select, .topHeader ul, #search-div h1 {
	margin: 0;
}

li.langPortlet form select {
	width: inherit;
}

.div-bg .aboutus-btn {
	margin-top: 8%;
	text-align: center;
}
/* Navigation */
#navigation .navbar-inner {
	border: 0 none;
}

#navigation.navbar {
	margin-bottom: 0;
}

.aui #navigation .navbar-inner div ul li, .aui #navigation .nav li.active a, 
.aui #navigation .nav li.open > a, .aui #navigation .navbar-inner div ul li:hover, 
.aui #navigation .navbar .nav > li > a:focus, .aui #navigation .navbar .nav > li > a:hover {
	background: none;
}

.aui #navigation .nav .dropdown-menu {
	background: #fff;
	border-top: 0;
	border-radius: none;
}

.aui .navbar .nav > li > .dropdown-menu::before, .aui .navbar .nav > li > .dropdown-menu::after {
	display: none;
}

.aui #navigation li a {
    box-shadow: none;
}

#navigation .nav-collapse > li:hover > ul.child-menu {
	display: block;
}

#navigation ul li a {
	font-size: 13px;
	font-weight: 600;
	text-transform: uppercase;
}

.aui #navigation .child-menu li a {
	color: #222;
}

#navigation .navbar-inner ul > li:hover > a {
	color: #fff;
	text-shadow: none;
}

.aui #navigation .navbar-inner ul.child-menu li a:hover {
	background: transparent;
	color: #00A161;
}

.aui #navigation .grandchildmenu li a span {
	color: #444;
	font-family: "Trebuchet MS";
	font-size: 12px;
	font-weight: normal;
	text-transform: capitalize;
}

.aui #navigation .grandchildmenu li a:hover span {
	color: #00A161;
}

.aui #navigation .grandchildmenu li a:hover {
	text-decoration: none;
}

#navigation .grandchildmenu li a::before {
	color: #444;
	content: "\003e";
	font-size: 11px;
	vertical-align: top;
}

#navigation .grandchildmenu li a:hover:before {
	color: #00A161;
	padding-left: 5px;
    transition: all 300ms ease-in-out 0s;
}

.homeCarousel .carousel-caption {
	background: none;
	color: #fff;
	text-align: center;
	top: 120px;
}

.div-bg .desc p {
	color: #999;
	font-family: tahoma;
	font-size: 13px;
	line-height: 150%;
	text-align: center !important;
	width: 80%;
}

.aui .btn-primary {
	font-family: tahoma;
    font-size: 13px;
}

.shopListSort.row-fluid {
	margin-top: 2%;
}

#shopping_list .product {
    border: 0;
}

#shopping_list .product:hover {
	border: 0 none;
	box-shadow: none;
}

.shopListSort select {
	width: inherit;
}

.aui .table-striped tbody > tr:nth-child(2n+1) > td, .aui .table-striped tbody > tr:nth-child(2n+1) > th,
.aui .table-hover tbody tr:hover > td, .aui .table-hover tbody tr:hover > th {
	background-color: transparent;
}

.aui table a {
	color: inherit;
}

#hrefFm {
	display: none;
}

.copyRight {
	padding-bottom: 0.2em;
    padding-top: 0.8em;
}

.copyRight h5 {
	margin: 0;
	font-size: 0.8em;
}

footer {
  font-family: tahoma;
  font-size: 12px;
}

.footer_wrapper {
	padding: 0;
}

.footer_wrapper ul {
	margin-left: 0;
}

footer .footer_label {
	font-size: 14px;
	font-weight: 600;
	text-transform: uppercase;
}

footer .social-icons ul li a i {
	font-size: 16px;
	width: 25px;
}

/* right toolsbar*/

#rightbar {
	top: auto;
	position: fixed;
	_position: absolute;
	z-index: 1001;
	right: 0;
	bottom: 60%;
	background: #f1f1f1;
	border: 1px solid #E5E5E5;
	border-left: none
}

.rightbar_wrap, #to_top_wrap, #switch_left_column_wrap,
	#switch_right_column_wrap {
	position: relative;
	z-index: 120;
}

a.icon_wrap {
	background: #f1f1f1;
	color: #00a161;
}

a.icon_wrap, .icon_wrap, a.icon_circle, .icon_circle, .shopping_cart .ajax_cart_right,
	.mobile_bar_tri {
	display: inline-block;
	height: 42px;
	line-height: 36px;
	min-width: 42px;
	padding: 2px;
	text-align: center;
	text-decoration: none;
}

#rightbar a:hover {
	text-decoration: none;
}

a.icon_wrap, .icon_wrap, .shopping_cart .ajax_cart_right {
	color: #222222;
}

.rightbar_wrap a.icon_wrap, #to_top_wrap a.icon_wrap,
	#switch_left_column_wrap a.icon_wrap, #switch_right_column_wrap a.icon_wrap
	{
	border-left: 1px solid #e5e5e5;
	height: 50px;
	padding: 6px;
	width: 40px;
}

#rightbar-shopping_cart, .shopping_cart {
	position: relative;
}

#rightbar-shopping_cart {
	z-index: 122;
}

.icon_text {
	display: block;
	font-size: 0.8333em;
	height: 14px;
	line-height: 14px;
	overflow: hidden;
}

a.icon_wrap.disabled, .icon_wrap.disabled {
	color: #cccccc;
}
/* ... */

